--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   firebase_messaging: ^15.1.6
   device_info_plus: ^11.1.1
   android_intent_plus: ^5.2.0
+  android_alarm_manager_plus: ^4.0.5
+  permission_handler: ^11.3.1
+  workmanager: ^0.5.2
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  lottie: ^3.2.0
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
@@ -67,9 +74,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/animations/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
