--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   google_sign_in: ^6.2.2
   lottie: ^3.2.0
   smooth_page_indicator: ^1.2.0+3
+  firebase_analytics: ^11.3.6
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
