--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   firebase_analytics: ^11.3.6
   app_settings: ^5.1.1
+  curved_navigation_bar: ^1.0.6
+  image_picker: ^1.1.2
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
