--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   image_picker: ^1.1.2
   shared_preferences: ^2.3.5
+  flutter_ringtone_player: ^4.0.0+3
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,7 @@ flutter:
     - assets/animations/
     - assets/images/
     - assets/icons/
+    - assets/alarm.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
