--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   responsive_framework: ^0.2.0
   animated_notch_bottom_bar:
   font_awesome_flutter: ^10.0.0
-
+  swipeable_tile: ^2.0.1
 
 dev_dependencies:
   flutter_test:
