--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   animated_notch_bottom_bar:
   font_awesome_flutter: ^10.0.0
   swipeable_tile: ^2.0.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
