--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.5
   flutter_ringtone_player: ^4.0.0+3
+  font_awesome_flutter: ^10.8.0
+  animated_notch_bottom_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
