--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_ringtone_player: ^4.0.0+3
   font_awesome_flutter: ^10.8.0
   animated_notch_bottom_bar: ^1.0.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
