--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,12 @@
-allprojects {
+buildscript {
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.3.1'
     }
 }
 
