--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: smart_pillbox
+name: home
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,31 +31,46 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  provider:
-  smooth_page_indicator:
-  lottie:
-  firebase_core:
-  firebase_auth:
-  cloud_firestore:
-  google_sign_in:
-  http:
-  path_provider:
-  shared_preferences:
-  image_picker: ^0.8.4+4
+
+  cupertino_icons: ^1.0.8
+  firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
   intl: ^0.20.1
-  flutter_svg:
-  responsive_framework: ^0.2.0
-  animated_notch_bottom_bar:
-  font_awesome_flutter: ^10.0.0
-  swipeable_tile: ^2.0.1
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
+  firebase_messaging: ^15.1.6
+  device_info_plus: ^11.1.1
+  android_intent_plus: ^5.2.0
+  android_alarm_manager_plus: ^4.0.5
+  permission_handler: ^11.3.1
+  workmanager: ^0.5.2
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  lottie: ^3.2.0
+  smooth_page_indicator: ^1.2.0+3
+  firebase_analytics: ^11.3.6
+  app_settings: ^5.1.1
+  curved_navigation_bar: ^1.0.6
+  image_picker: ^1.1.2
+  shared_preferences: ^2.3.5
+  flutter_ringtone_player: ^4.0.0+3
+  font_awesome_flutter: ^10.8.0
+  animated_notch_bottom_bar: ^1.0.3
   uuid: ^4.5.1
+  card_swiper: ^2.0.0
+  cunning_document_scanner: ^1.2.3
+  flutter_image_compress: ^2.4.0
+  path_provider: ^2.1.5
+  flutter_speed_dial: ^7.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -68,7 +83,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  generate: true
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -79,12 +94,13 @@ flutter:
     - assets/animations/
     - assets/images/
     - assets/icons/
+    - assets/alarm.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.dev/to/asset-from-package
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -104,4 +120,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.dev/to/font-from-package
