--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   animated_notch_bottom_bar: ^1.0.3
   uuid: ^4.5.1
+  flutter_speed_dial: ^7.0.0
+  flutter_image_compress: ^2.4.0
+  cunning_document_scanner: ^1.2.3
 
 dev_dependencies:
   flutter_test:
