--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,9 @@ android {
         targetSdk = 34
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+
+        // Add vector drawable support
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -38,8 +41,20 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+dependencies {
+    // Add Material Design components
+    implementation 'com.google.android.material:material:1.11.0'
+    
+    // Add AndroidX core and AppCompat
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
 
 flutter {
