--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   flutter_image_compress: ^2.4.0
   cunning_document_scanner: ^1.2.3
+  razorpay_flutter: ^1.3.7
+  mailer: ^6.4.1
+  pdf: ^3.11.2
+  flutter_show_when_locked: ^1.0.0
+  flutter_foreground_task: ^8.17.0
 
 dev_dependencies:
   flutter_test:
