--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
             android:theme="@style/AppTheme"
             android:showWhenLocked="true"
             android:turnScreenOn="true"
-            android:exported="false">
+            android:exported="false"
+            android:excludeFromRecents="true">
         </activity>
 
         <receiver android:name=".AlarmReceiver" android:enabled="true" android:exported="false"/>
