--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,17 @@ dependencies:
   flutter_show_when_locked: ^1.0.0
   flutter_foreground_task: ^8.17.0
   flutter_animate: ^4.5.2
+  flutter_osm_plugin: ^1.3.6
+  geolocator: ^13.0.2
+  provider: ^6.1.2
+  animations: ^2.0.11
+  google_fonts: ^6.2.1
+  url_launcher: ^6.3.1
+  flutter_slidable: ^3.1.2
+  another_telephony: ^0.3.0
+  whatsapp_share: ^2.0.2
+  share_plus: ^10.1.4
+  social_sharing_plus: ^1.2.3
 
 dev_dependencies:
   flutter_test:
