--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   whatsapp_share: ^2.0.2
   share_plus: ^10.1.4
   social_sharing_plus: ^1.2.3
+  flutter_facebook_auth: ^7.1.1
+  intl_phone_field: ^3.2.0
+  animated_text_kit: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -107,6 +110,7 @@ flutter:
     - assets/animations/
     - assets/images/
     - assets/icons/
+    - assets/models/
     - assets/alarm.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -120,17 +124,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+  - family: Raleway
+    fonts:
+      - asset: assets/fonts/Raleway-Regular.ttf
+      - asset: assets/fonts/Raleway-Bold.ttf
+        weight: 700
+  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
