--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
-  intl: ^0.20.1
+  intl: ^0.19.0
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
   firebase_messaging: ^15.1.6
@@ -82,6 +82,20 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   intl_phone_field: ^3.2.0
   animated_text_kit: ^4.2.3
+  flutter_cube: ^0.1.1
+  lucide_icons: ^0.257.0
+  flutter_gemini: ^3.0.0
+  jumping_dot: ^0.0.7
+  speech_to_text: ^7.0.0
+  floating_draggable_widget: ^2.3.0
+  cron: ^0.6.1
+  salomon_bottom_bar: ^3.3.2
+  responsive_navigation_bar: ^5.0.2
+  wifi_scan: ^0.4.1+2
+  wifi_iot: ^0.3.19+2
+  esp_smartconfig: ^2.0.4
+  network_info_plus: ^6.1.3
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -112,6 +126,15 @@ flutter:
     - assets/icons/
     - assets/models/
     - assets/alarm.mp3
+    - assets/cube/
+    - assets/cube/textures/jewelry-box-009_ao-metalness-4k.png
+    - assets/cube/textures/jewelry-box-009_col-metalness-4k.png
+    - assets/cube/textures/jewelry-box-009_gloss-specular-4k.png
+    - assets/cube/textures/jewelry-box-009_height-metalness-4k.png
+    - assets/cube/textures/jewelry-box-009_metalness-metalness-4k.png
+    - assets/cube/textures/jewelry-box-009_nrm-metalness-4k.png
+    - assets/cube/textures/jewelry-box-009_roughness-metalness-4k.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
