--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,9 @@ dependencies:
   esp_smartconfig: ^2.0.4
   network_info_plus: ^6.1.3
   http: ^1.3.0
+  feedback: ^3.1.0
+  shake_gesture: ^1.1.0
+  flutter_email_sender: ^7.0.0
 
 dev_dependencies:
   flutter_test:
