--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   feedback: ^3.1.0
   shake_gesture: ^1.1.0
   flutter_email_sender: ^7.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
