--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,9 +30,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-feature android:name="android.hardware.wifi"/>
     <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" android:usesPermissionFlags="neverForLocation"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 
     <application
-        android:label="smart_pillbox"
+        android:label="SmartDose"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
@@ -100,7 +101,11 @@
             android:excludeFromRecents="true">
         </activity>
 
-        <receiver android:name=".AlarmReceiver" android:enabled="true" android:exported="false"/>
+        <receiver android:name=".AlarmReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
         
         <meta-data
             android:name="flutterEmbedding"
