--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,13 @@ dependencies:
   shake_gesture: ^1.1.0
   flutter_email_sender: ^7.0.0
   flutter_dotenv: ^5.2.1
+  flutter_emoji_feedback: ^1.0.3
+  cached_network_image: ^3.4.1
+  timeline_tile: ^2.0.0
+  timelines: ^0.1.0
+  excel: ^4.0.6
+  table_calendar: ^3.1.3
+  timeline_tile_plus: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -138,6 +145,7 @@ flutter:
     - assets/cube/textures/jewelry-box-009_metalness-metalness-4k.png
     - assets/cube/textures/jewelry-box-009_nrm-metalness-4k.png
     - assets/cube/textures/jewelry-box-009_roughness-metalness-4k.png
+    - assets/.env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
