--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -150,6 +150,9 @@ flutter:
     - assets/cube/textures/jewelry-box-009_metalness-metalness-4k.png
     - assets/cube/textures/jewelry-box-009_nrm-metalness-4k.png
     - assets/cube/textures/jewelry-box-009_roughness-metalness-4k.png
+    - assets/box/Blue_Geometric_Box_0417150445_texture.mtl
+    - assets/box/Blue_Geometric_Box_0417150445_texture.obj
+    - assets/box/Blue_Geometric_Box_0417150445_texture.png
     - assets/.env
     - assets/buzzer/beep_beep.wav
     - assets/buzzer/calm_tune.wav
@@ -172,10 +175,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Raleway
+    - family: Poppins
       fonts:
-        - asset: assets/fonts/Raleway-Regular.ttf
-        - asset: assets/fonts/Raleway-Bold.ttf
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
 
   # For details regarding fonts from package dependencies,
